--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -244,6 +244,11 @@ h1, h2, h3, h4, h5, h6 {
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
+.hover-change:hover {
+  transition: transform .3s; /* Animation */
+  transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
+
 #hero {
   width: 100%;
   height: 100vh;
